--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="https://app.widemedianet.info">Products</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/what-we-offer.html">
                             Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="contacts.html">Get Quote</a>
+                    <li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/contacts.html">Get Quote</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://web.facebook.com/Widemediake" target="_blank">
