--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
-                        <img src="assets/images/wm-logo1-96x96.jpg" alt="Mobirise" style="height: 3rem;">
+                    <a href="onlinecyber/index.html">
+                        <img src="assets/images/wm-logo1-96x96.jpg" alt="Wide Media Networks" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="index.html">WIDE MEDIA NETWORKS</a></span>
