--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="onlinecyber/index.html">
+                    <a href="index.html">
                         <img src="assets/images/wm-logo1-96x96.jpg" alt="Wide Media Networks" style="height: 3rem;">
                     </a>
                 </span>
@@ -55,9 +55,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/what-we-offer.html">
+                    <li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
                             Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/contacts.html">Get Quote</a>
+                    <li class="nav-item"><a class="nav-link link text-success display-4" href="contacts.html">Get Quote</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://web.facebook.com/Widemediake" target="_blank">
