--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="onlinecyber/index.html">Home</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
                             Services</a></li>
                     <li class="nav-item"><a class="nav-link link text-success display-4" href="contacts.html">Get Quote</a>
