--- a/what-we-offer.html
+++ b/what-we-offer.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/wm-logo1-96x96.jpg" alt="Mobirise" style="height: 3rem;">
+                        <img src="assets/images/wm-logo1-96x96.jpg" alt="Wide Media Networks" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="index.html">WIDE MEDIA NETWORKS</a></span>
@@ -56,7 +56,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="https://app.widemedianet.info">Products</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
+                    <li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
                             Services</a></li>
                     <li class="nav-item"><a class="nav-link link text-success display-4" href="contacts.html">Get Quote</a>
                     </li></ul>
