--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/wm-logo1-96x96.jpg" alt="Mobirise" style="height: 3rem;">
+                        <img src="assets/images/wm-logo1-96x96.jpg" alt="Wide Media Networks" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="index.html">WIDE MEDIA NETWORKS</a></span>
@@ -56,7 +56,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="https://app.widemedianet.info">Products</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
+                   <li class="nav-item"><a class="nav-link link text-success display-4" href="what-we-offer.html">
                             Services</a></li>
                     <li class="nav-item"><a class="nav-link link text-success display-4" href="contacts.html">Get Quote</a>
                     </li></ul>
@@ -125,7 +125,7 @@
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Address</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">Machakos Town, Machakos County, Nairobi&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Machakos Town, Machakos County&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -204,8 +204,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/976917" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
-  
+</section>
   
   <input name="animation" type="hidden">
   </body>
