--- a/what-we-offer.html
+++ b/what-we-offer.html
@@ -175,7 +175,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-3">
                         <div class="image-wrapper">
-                            <img src="assets/images/mbr-506x441.png" alt="Mobirise" title="">
+                            <img src="assets/images/mbr-506x441.png" alt="Wide Media Cyber" title="">
                         </div>
                     </div>
                     <div class="col-12 col-md">
@@ -205,7 +205,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-3">
                         <div class="image-wrapper">
-                            <img src="assets/images/mbr-506x284.jpg" alt="Mobirise" title="">
+                            <img src="assets/images/mbr-506x284.jpg" alt="Wide Media Cyber" title="">
                         </div>
                     </div>
                     <div class="col-12 col-md">
@@ -294,10 +294,6 @@
 
 <section data-bs-version="5.1" class="testimonails3 carousel slide testimonials-slider cid-su9OuVBhn3" data-interval="false" data-bs-interval="false" id="testimonials3-e">
 
-    
-
-    
-
     <div class="text-center container-fluid">
         <h3 class="mb-4 mbr-fonts-style display-2">
             <strong>Our Clients</strong></h3>
@@ -385,12 +381,7 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-  
+</div></div>
 <section data-bs-version="5.1" class="footer7 cid-stfDWhaHGC" once="footers" id="footer7-4">
     <div class="container">
         <div class="media-container-row align-center mbr-white">
